[package]
name = "efficient_route_planning"
version = "0.1.0"
authors = ["vtrinh"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# to use `phf` in `no_std` environments
phf = { version = "0.9", features = ["macros"] }
